renamed to match validation**

--- a/SoftwareArchitect/Kubernetes/deployment.yaml
+++ b/SoftwareArchitect/Kubernetes/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: otus-01-deployment
+  labels:
+    app: otus-01-app
 spec:
   replicas: 2
   selector:
@@ -14,7 +16,6 @@ spec:
     spec:
       containers:
         - name: otus-01
-          image: eburger/otus-01:v1
+          image: eburger/otus_01:v1
           ports:
-            - name: web
-              containerPort: 8000
+            - containerPort: 8000
