--- a/SoftwareArchitect.Api/SoftwareArchitect.Api.csproj
+++ b/SoftwareArchitect.Api/SoftwareArchitect.Api.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\SoftwareArchitect.Storages\SoftwareArchitect.Storages.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="DI" />
+    </ItemGroup>
+
 </Project>
