--- a/SoftwareArchitect.Api/Deploy/Docker/Dockerfile
+++ b/SoftwareArchitect.Api/Deploy/Docker/Dockerfile
@@ -2,12 +2,14 @@ FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env
 WORKDIR /app
 
 # Copy csproj and restore as distinct layers
-COPY *.csproj ./
-RUN dotnet restore
+COPY SoftwareArchitect.Api/*.csproj ./SoftwareArchitect.Api/
+COPY SoftwareArchitect.Common.Models/*.csproj ./SoftwareArchitect.Common.Models/
+COPY SoftwareArchitect.Storages/*.csproj ./SoftwareArchitect.Storages/
+RUN dotnet restore ./SoftwareArchitect.Api/SoftwareArchitect.Api.csproj
 
 # Copy everything else and build
 COPY . ./
-RUN dotnet publish -c Release -o out
+RUN dotnet publish ./SoftwareArchitect.Api -c Release -o out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
