UserStorage.cs implemented*

--- a/SoftwareArchitect.Api/SoftwareArchitect.Api.csproj
+++ b/SoftwareArchitect.Api/SoftwareArchitect.Api.csproj
@@ -13,4 +13,8 @@
       <Folder Include="DI" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FluentResults" Version="2.0.0" />
+    </ItemGroup>
+
 </Project>
