--- a/SoftwareArchitect.Storages/SoftwareArchitect.Storages.csproj
+++ b/SoftwareArchitect.Storages/SoftwareArchitect.Storages.csproj
@@ -9,6 +9,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentResults" Version="2.0.0" />
       <PackageReference Include="Npgsql" Version="4.1.4" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
     </ItemGroup>
