--- a/SoftwareArchitect.Api/appsettings.json
+++ b/SoftwareArchitect.Api/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "PostgresConnection": "Host=localhost;Port=5432;Database=Otus_test;Username=postgres;Password=password"
-  }
+  "AllowedHosts": "*"
 }
