secrets.yaml added*

--- a/SoftwareArchitect.Api/Deploy/Kubernetes/secrets.yaml
+++ b/SoftwareArchitect.Api/Deploy/Kubernetes/secrets.yaml
@@ -4,7 +4,7 @@ metadata:
   name: otus-01-secret
 type: Opaque
 data:
-  db-name: otus-01-db
-  username: pstgrs
-  password: psswrd
-  connection-string: "Host=postgres;Port=5432;Database=otus-01-db;Username=pstgrs;Password=psswrd"
+  db-name: b3R1cy0wMS1kYg==
+  username: cHN0Z3Jz
+  password: cHNzd3Jk
+  connection-string: SG9zdD1wb3N0Z3JlcztQb3J0PTU0MzI7RGF0YWJhc2U9b3R1cy0wMS1kYjtVc2VybmFtZT1wc3RncnM7UGFzc3dvcmQ9cHNzd3Jk
