--- a/SoftwareArchitect.Api/Deploy/Helm/otus-01/templates/config.yaml
+++ b/SoftwareArchitect.Api/Deploy/Helm/otus-01/templates/config.yaml
@@ -7,4 +7,4 @@ data:
   db-name: b3R1cy0wMS1kYg==
   username: cHN0Z3Jz
   password: cHNzd3Jk
-  connection-string: {{ printf "Host=%s;Port=%s;Database=%s;Username=%s;Password=%s" .Values.postgres.host .Values.postgres.port .Values.postgres.dbname .Values.postgres.username .Values.postgres.password  | b64enc | quote }}
+  connection-string: {{ printf "Host=%s;Port=%s;Database=%s;Username=%s;Password=%s" (include "postgresql.fullname" .) .Values.postgresql.service.port .Values.postgresql.postgresqlDatabase .Values.postgresql.postgresqlUsername .Values.postgresql.postgresqlPassword  | b64enc | quote }}
