--- a/SoftwareArchitect.Api/Deploy/Helm/otus-01/templates/initdb.yaml
+++ b/SoftwareArchitect.Api/Deploy/Helm/otus-01/templates/initdb.yaml
@@ -14,6 +14,7 @@ metadata:
     "helm.sh/hook-weight": "-5"
     "helm.sh/hook-delete-policy": hook-succeeded
 spec:
+  ttlSecondsAfterFinished: {{ .Values.jobsTtlSecondsAfterFinish }}
   template:
     metadata:
       name: "{{ .Release.Name }}"
