--- a/SoftwareArchitect.Api/Deploy/Helm/otus-01/templates/initdb.yaml
+++ b/SoftwareArchitect.Api/Deploy/Helm/otus-01/templates/initdb.yaml
@@ -46,7 +46,7 @@ spec:
                 secretKeyRef:
                   name: otus-01-secret
                   key: connection-string
-          image: eburger/otus_01:v3
+          image: {{.Values.image.repository}}:{{.Values.image.tag}}
           command: ["dotnet", "SoftwareArchitect.Job.dll"]
 
   backoffLimit: 5
