--- a/SoftwareArchitect.Api/SoftwareArchitect.Api.csproj
+++ b/SoftwareArchitect.Api/SoftwareArchitect.Api.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
       <PackageReference Include="FluentResults" Version="2.0.0" />
+      <PackageReference Include="prometheus-net.AspNetCore" Version="3.6.0" />
     </ItemGroup>
 
     <ItemGroup>
