servicemonitor.yaml added

--- a/SoftwareArchitect.Api/Deploy/Helm/otus-01/values.yaml
+++ b/SoftwareArchitect.Api/Deploy/Helm/otus-01/values.yaml
@@ -9,6 +9,10 @@ image:
 service:
   type: NodePort
   port: 3000
+  
+metrics:
+  serviceMonitor:
+    enabled: true
 
 ingress:
   host: arch.homework
