--- a/SoftwareArchitect.Job/SoftwareArchitect.Job.csproj
+++ b/SoftwareArchitect.Job/SoftwareArchitect.Job.csproj
@@ -9,4 +9,10 @@
       <ProjectReference Include="..\SoftwareArchitect.Storages\SoftwareArchitect.Storages.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Logging.Console, Version=3.1.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
+        <HintPath>..\..\..\Program Files\dotnet\packs\Microsoft.AspNetCore.App.Ref\3.1.0\ref\netcoreapp3.1\Microsoft.Extensions.Logging.Console.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
