--- a/SoftwareArchitect.Job/SoftwareArchitect.Job.csproj
+++ b/SoftwareArchitect.Job/SoftwareArchitect.Job.csproj
@@ -15,4 +15,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.9" />
+    </ItemGroup>
+
 </Project>
