--- a/SoftwareArchitect.Auth.Api/Deploy/Helm/otus-01-auth/templates/deployment.yaml
+++ b/SoftwareArchitect.Auth.Api/Deploy/Helm/otus-01-auth/templates/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "otus-01.fullname" . }}
+  name: {{ include "otus-01-auth.fullname" . }}
   labels:
-    {{- include "otus-01.labels" . | nindent 4 }}
+    {{- include "otus-01-auth.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      {{- include "otus-01.selectorLabels" . | nindent 6 }}
+      {{- include "otus-01-auth.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/config.yaml") . | sha256sum }}
       labels:
-        {{- include "otus-01.selectorLabels" . | nindent 8 }}
+        {{- include "otus-01-auth.selectorLabels" . | nindent 8 }}
     spec:
       containers:
         - name: {{ .Chart.Name }}
@@ -30,7 +30,7 @@ spec:
             - name: POSTGRES_CONNECTION_STRING
               valueFrom:
                 secretKeyRef:
-                  name: otus-01-secret
+                  name: otus-01-auth-secret
                   key: connection-string
           livenessProbe:
             httpGet:
