--- a/SoftwareArchitect.Auth.Api/Deploy/Helm/otus-01-auth/templates/service.yaml
+++ b/SoftwareArchitect.Auth.Api/Deploy/Helm/otus-01-auth/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "otus-01.fullname" . }}
+  name: {{ include "otus-01-auth.fullname" . }}
   labels:
-    {{- include "otus-01.labels" . | nindent 4 }}
+    {{- include "otus-01-auth.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "otus-01.selectorLabels" . | nindent 4 }}
+    {{- include "otus-01-auth.selectorLabels" . | nindent 4 }}
