--- a/SoftwareArchitect.Auth.Api/SoftwareArchitect.Auth.Api.csproj
+++ b/SoftwareArchitect.Auth.Api/SoftwareArchitect.Auth.Api.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <PackageReference Include="FluentResults" Version="2.2.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="Npgsql" Version="4.1.5" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
     </ItemGroup>
