--- a/SoftwareArchitect.Api/SoftwareArchitect.Api.csproj
+++ b/SoftwareArchitect.Api/SoftwareArchitect.Api.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
       <PackageReference Include="FluentResults" Version="2.2.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="prometheus-net.AspNetCore" Version="3.6.0" />
     </ItemGroup>
 
