--- a/SoftwareArchitect.Api/Deploy/Helm/otus-01/templates/ingress.yaml
+++ b/SoftwareArchitect.Api/Deploy/Helm/otus-01/templates/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/auth-url: "http://auth.auth.svc.cluster.local:9000/auth"
     nginx.ingress.kubernetes.io/auth-signin: "http://$host/signin"
-    nginx.ingress.kubernetes.io/auth-response-headers: "sessionId"
+    nginx.ingress.kubernetes.io/auth-response-headers: "X-UserId"
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
